# acn_project_backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/endpoints/: auth.py  judge.py  leaderboard.py  problems.py  submissions.py  websocket.py
app/core/: config.py  database.py  leaderboard.py  security.py
app/models/: __init__.py
problems/: README.md
problems/problem1/: run.py
problems/problem1/error/: 1.txt
problems/problem1/meta/: 1.txt  2.txt  3.txt
problems/problem2/: run.py
problems/problem2/meta/: 1.txt  2.txt  3.txt
scripts/: init_db.py  init_problems.py  verify_problem_structure.py
